--- a/src/css/variables/spacing/index.scss
+++ b/src/css/variables/spacing/index.scss
@@ -55,7 +55,5 @@ $spacings: (
         @return var(--spacing);
     }
 
-    $spacing-key: str-replace($spacing-key, '/', '-');
-
-    @return var(--spacing--#{$spacing-key});
+    @return map-get($spacings, $spacing-key);
 }
